--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ bitcoin = "0.31.1"
 bitcoin-rpc = "0.2.0"
 hex = "0.4.3"
 rand = "0.4.6"
+
+schnorr_fun = "0.9.2"
+secp256kfun = "0.9.1"
+sha2 = "0.10.8"
