--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 bitcoin = "0.31.1"
-bitcoin-rpc = "0.2.0"
+bitcoincore-rpc = "0.18.0"
 hex = "0.4.3"
 lazy_static = "1.4.0"
 rand = "0.4.6"
