--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ rand = "0.4.6"
 schnorr_fun = "0.9.2"
 secp256kfun = "0.9.1"
 sha2 = "0.10.8"
+clap = { version = "4.4.18", features = ["derive"] }
